--- a/imagepicker/src/main/res/layout/adapter_camera_item.xml
+++ b/imagepicker/src/main/res/layout/adapter_camera_item.xml
@@ -14,7 +14,7 @@
         android:drawablePadding="6dp"
         android:drawableTop="@mipmap/grid_camera"
         android:gravity="center"
-        android:text="拍摄照片"
+        android:text="@string/ip_str_capture"
         android:textColor="#CDCECE"
         android:textSize="14sp"/>
 
