--- a/imagepicker/src/main/res/values/colors.xml
+++ b/imagepicker/src/main/res/values/colors.xml
@@ -9,4 +9,11 @@
     <color name="ip_color_accent">#1AAD19</color>
     <color name="ip_text_secondary_inverted">#66ffffff</color>
     <color name="ip_text_primary_inverted">#ffffff</color>
+    <color name="ip_crop_back">#1C1C1C</color>
+    <color name="ip_crop_frame">#ffe0e0e0</color>
+    <color name="ip_crop_guide">#ffe0e0e0</color>
+    <color name="ip_crop_handle">#ffe0e0e0</color>
+    <color name="ip_pb_color">#1AAD19</color>
+    <color name="ip_pb_back_color">#ffe0e0e0</color>
+
 </resources>
