--- a/imagepicker/src/main/res/layout/ip_dialog_loading.xml
+++ b/imagepicker/src/main/res/layout/ip_dialog_loading.xml
@@ -2,10 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fl_pop_blank"
-             android:layout_width="match_parent"
+             android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
-             android:paddingBottom="10dp"
+             android:background="#00000000"
     >
 
     <RelativeLayout
@@ -14,7 +14,7 @@
         android:layout_height="120dp"
         android:background="@color/ip_pb_back_color"
         android:layout_gravity="center"
-        android:padding="10dp">
+        android:padding="0dp">
 
         <ProgressBar
             android:layout_width="40dp"
